Added tasks: repository, service, controller, routes and swagger api docs. Implemented dto (data-transfer objects) so we dont mix domain models with api contracts
