# src/app.ts
@@ -3,6 +3,7 @@ import path from "path";
 import cors from "cors";
 import usersRouter from './routes/users';
 import teamsRouter from './routes/teams';
+import taskRouter from './routes/tasks';
 import swaggerUi from "swagger-ui-express";
 import YAML from "yamljs";
 
@@ -12,6 +13,7 @@ export function createApp() {
   app.use(express.json());
   app.use("/users", usersRouter);
   app.use("/teams", teamsRouter);
+  app.use('/tasks', taskRouter);
   
   const openapiPath = path.resolve(process.cwd(), "openapi.yaml");
   const openapiDocument = YAML.load(openapiPath);
